--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,12 @@
         {
             "src": "assets/logo.png",
             "type": "image/png",
-            "sizes": "48x48"
+            "sizes": "128x128"
+        },
+        {
+            "src": "assets/logo-144.png",
+            "type": "image/png",
+            "sizes": "144x144"
         }
     ],
     "start_url": "/?utm_source=launcher"
