--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,5 @@
             "sizes": "144x144"
         }
     ],
-    "start_url": "/?utm_source=launcher"
+    "start_url": "index.html?utm_source=launcher"
 }
